[package]
name = "apibara-sink-postgres"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_sink_postgres"
path = "src/lib.rs"

[[bin]]
name = "apibara-sink-postgres"
path = "src/bin.rs"

[dependencies]
anyhow.workspace = true
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
apibara-sink-common = { path = "../sink-common" }
async-trait.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
tokio-util.workspace = true
tracing.workspace = true

