[package]
name = "apibara-sink-postgres"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_sink_postgres"
path = "src/lib.rs"

[[bin]]
name = "apibara-sink-postgres"
path = "src/bin.rs"

[dependencies]
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
apibara-sink-common = { path = "../sink-common" }
async-trait.workspace = true
color-eyre.workspace = true
clap.workspace = true
native-tls = "0.2.11"
postgres-native-tls = "0.5.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres = { version = "0.7.8", features = ["with-serde_json-1"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers.workspace = true

