[package]
name = "apibara-sink-webhook"
version = "0.1.0"
edition = "2021"

[lib]
name = "apibara_sink_webhook"
path = "src/lib.rs"

[[bin]]
name = "apibara-sink-webhook"
path = "src/bin.rs"

[dependencies]
anyhow = "1.0.66"
apibara-core = { path = "../core" }
apibara-sink-common = { path = "../sink-common" }
async-trait = "0.1.68"
clap = { version = "4.0.32", features = ["env", "unicode", "cargo", "derive"] }
ctrlc = { version = "3.2.3", features = ["termination"] }
prost = "0.11.9"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.20.1", features = ["full"] }
tokio-util = "0.7.8"
