[package]
name = "apibara-sink-webhook"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_sink_webhook"
path = "src/lib.rs"

[[bin]]
name = "apibara-sink-webhook"
path = "src/bin.rs"

[dependencies]
anyhow = { workspace = true }
apibara-core = { path = "../core" }
apibara-observability = { path = "../observability" }
apibara-sink-common = { path = "../sink-common" }
async-trait = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
http = { workspace = true }
prost = { workspace = true }
reqwest = { version = "0.11.16", default-features = false, features = ["serde_json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
