[package]
name = "starknet-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
jsonrpsee-core = "0.13.1"
jsonrpsee-http-client = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.14"
starknet = "0.2.0"

[dev-dependencies]
tokio = { version = "1.18", features = ["full"] }