[package]
name = "apibara-dna-starknet"
version = "2.0.0-beta.10"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_starknet"
path = "src/lib.rs"

[[bin]]
name = "apibara-dna-starknet"
path = "src/bin.rs"

[dependencies]
apibara-observability = { path = "../observability" }
apibara-dna-common = { path = "../common" }
apibara-dna-protocol = { path = "../protocol" }
byte-unit.workspace = true
clap.workspace = true
ctrlc.workspace = true
error-stack.workspace = true
futures.workspace = true
hex.workspace = true
mimalloc.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
roaring.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
starknet = "0.12.0"
tonic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
