[package]
name = "apibara-dna-starknet"
version = "2.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "apibara_dna_starknet"
path = "src/lib.rs"

[[bin]]
name = "apibara-dna-starknet"
path = "src/bin.rs"

[dependencies]
apibara-observability = { path = "../observability" }
apibara-dna-common = { path = "../common" }
apibara-dna-protocol = { path = "../protocol" }
backon.workspace = true
byte-unit.workspace = true
bytes.workspace = true
clap.workspace = true
crc32fast = "1.3.2"
ctrlc.workspace = true
error-stack.workspace = true
futures.workspace = true
hex.workspace = true
mimalloc.workspace = true
prost.workspace = true
prost-types.workspace = true
reqwest.workspace = true
roaring.workspace = true
rkyv.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
starknet-rust = "0.19.0"
tonic.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
zstd = "0.13"
