[package]
name = "apibara-transformer"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
data-url = "0.2.0"
deno_ast = { version = "0.26.0", features = ["cjs", "transpiling"] }
deno_core = "0.189.0"
deno_runtime = "0.115.0"
dotenvy.workspace = true
reqwest.workspace = true
serde_json.workspace = true
serde_v8 = "0.100.0"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tempfile.workspace = true
