[package]
name = "wings"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "wings"
path = "src/main.rs"

[dependencies]
arrow.workspace = true
arrow-json.workspace = true
arrow-schema.workspace = true
axum.workspace = true
bytesize.workspace = true
clap.workspace = true
error-stack.workspace = true
hex.workspace = true
reqwest = { version = "0.11", features = [
    "json",
    "rustls-tls",
], default-features = false }
serde_json.workspace = true
thiserror.workspace = true
tonic.workspace = true
tonic-reflection.workspace = true
tokio.workspace = true
tokio-util.workspace = true
wings-ingestor-core = { path = "../wings_ingestor_core" }
wings-ingestor-http = { path = "../wings_ingestor_http" }
wings-metadata-core = { path = "../wings_metadata_core" }
wings-object-store = { path = "../wings_object_store" }
wings-server-http = { path = "../wings_server_http" }
