[package]
name = "wings-ingestor-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_ingestor_core"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-schema.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
datafusion.workspace = true
error-stack.workspace = true
futures-util.workspace = true
hex.workspace = true
object_store.workspace = true
parquet.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
ulid = "1.2.1"
wings-object-store = { path = "../wings_object_store" }
wings-metadata-core = { path = "../wings_metadata_core" }

[dev-dependencies]
bytesize.workspace = true
