[package]
name = "wings-metadata-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_metadata_core"
path = "src/lib.rs"

[dependencies]
arrow.workspace = true
arrow-ipc.workspace = true
async-trait.workspace = true
bytes.workspace = true
bytesize.workspace = true
dashmap.workspace = true
datafusion.workspace = true
error-stack.workspace = true
flatbuffers.workspace = true
hex.workspace = true
http.workspace = true
http-body.workspace = true
moka.workspace = true
object_store.workspace = true
serde.workspace = true
parquet.workspace = true
paste.workspace = true
prost.workspace = true
prost-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
