[package]
name = "wings-object-store"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "wings_object_store"
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
object_store.workspace = true
tempfile = "3.0"
wings-metadata-core = { path = "../wings_metadata_core" }

[dev-dependencies]
tokio.workspace = true
